[package]
name = "icmp-socket"
description = "ICMP sockets for both IPv4 and IPv6"
version = "0.1.1"
repository = "https://github.com/zaphar/icmp-socket"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.19"
byteorder = "1.3.4"